@@ -12,6 +12,10 @@ For a complete change history, please see the Subversion log comments.
 
 Version 4.99 (CVS HEAD)
 -----------------------
+ - GD : draw symbols along a line using pixmap symbols (#2121)
+
+ - SVG : Polygons should not be filled if color is not given (#2055)
+
  - WMS : fixed request with a BBOX and and SLD containing Filter encoding (2079)
 
  - Initial support for loading entire mapfiles via a string buffer (msLoadMapFromString).
